Add try constexpr algor. option w/ any compiler

Add try constexpr algor. option w/ any compiler
- Although constexpr algorithms are only enabled for clang currently,
  you can try them anyway with -DCHEMICAL_SYMMETRIES_TRY_CONSTEXPR=ON
  in cmake invocation

NOTE: gcc continues to fail, most likely due to
https://gcc.gnu.org/bugzilla/show_bug.cgi?id=71504